<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linAdView">

        <LinearLayout
            android:id="@+id/linHeaderView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_black_strip"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgCancel"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:padding="@dimen/icon_paddings"
                android:layout_weight="1"
                android:src="@drawable/selector_back_button" />

            <com.app.imagecreator.customviews.CustomTextview
                android:id="@+id/txtTitle"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/text_screen_title"
                android:textColor="@color/textview_color"
                android:textSize="@dimen/activity_filter_textview_text_size" />

            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="@dimen/activity_filter_button_ok_margin_left"
                android:padding="@dimen/icon_paddings"
                android:layout_weight="1"
                android:src="@drawable/selector_done_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtPreviewText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_textView_height"
            android:layout_below="@+id/linHeaderView"
            android:background="@color/dialog_text_textview_BG_color"
            android:gravity="left|center_vertical"
            android:hint="@string/dialog_text_preview"
            android:padding="@dimen/dialog_text_textview_padding_left"
            android:textColor="@color/textview_color"
            android:textColorHint="@color/textview_color"
            android:textSize="@dimen/dialog_text_textview_text_size" />

        <RelativeLayout
            android:id="@+id/relEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPreviewText"
            android:background="@color/activity_text_Layout_BG_color"
            android:gravity="left|center_vertical"
            android:padding="@dimen/dialog_text_edittext_padding_left">

            <EditText
                android:id="@+id/edtUsersText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/relColorPicker"
                android:background="@android:color/transparent"
                android:hint="@string/please_enter_text"
                android:singleLine="true"
                android:textColor="@color/textview_color"
                android:textColorHint="@color/dialog_text_textview_text_color"
                android:textSize="@dimen/dialog_text_edittext_text_size" />

            <View
                android:id="@+id/viewBaseLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_text_base_line_view_height"
                android:layout_below="@+id/edtUsersText"
                android:layout_marginRight="@dimen/activity_text_base_line_view_margin_right"
                android:layout_marginTop="@dimen/activity_text_base_line_view_margin_top"
                android:layout_toLeftOf="@+id/relColorPicker"
                android:background="@color/dialog_text_textview_text_color" />

            <RelativeLayout
                android:id="@+id/relColorPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_color_picker_box">

                <ImageView
                    android:id="@+id/imgColorPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/icon_paddings"
                    android:src="@drawable/selector_color_picker" />
            </RelativeLayout>
        </RelativeLayout>

        <ListView
            android:id="@+id/listTextType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relEditText"
            android:background="@color/dialog_text_textview_BG_color"
            android:numColumns="3"
            android:stretchMode="columnWidth"></ListView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/view_ad_mob" />
    </LinearLayout>

</RelativeLayout>